Fix github banner on mobile so it doesn't overlap hint rules.

--- a/app/assets/stylesheets/pathpuz/forkongithub.css.sass
+++ b/app/assets/stylesheets/pathpuz/forkongithub.css.sass
@@ -27,13 +27,6 @@
   bottom: 1px
   top: auto
 
-#forkongithub
-  position: absolute
-  bottom: 5vh
-  margin: 0 auto
-  left: 0
-  right: 0
-
 @media screen and (min-width:600px)
   #forkongithub
     position: absolute
